@@ -1,5 +1,7 @@
 2007-07-26  Andreas Kirschbaum
 
+	* Add tooltips for spellbelt and spelllist.
+
 	* Increase font sizes and remove unnecessary text information.
 
 	* Add option --server to skip the metaserver window.
